# c-builder

./: README.md  c-builder.cabal  cabal.project
expected/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt
src/Language/C/: Encode.hs  Expr.hs  Syntax.hs  Type.hs
src/Language/C/Type/: Signedness.hs  Width.hs  X86.hs
test/: Main.hs
