cabal-version: 3.0
name: c-builder
version: 0.1.0.0
synopsis: Generate C code
-- bug-reports:
license: BSD-3-Clause
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2022 Andrew Martin
category: Data

library
  exposed-modules:
    Language.C.Encode
    Language.C.Expr
    Language.C.Syntax
    Language.C.Type
    Language.C.Type.X86
    Language.C.Type.Width
    Language.C.Type.Signedness
  build-depends:
    , base >=4.14.3.0 && <5
    , hashable >=1.4.4
    , text-short >=0.1.3
    , array-builder >=0.2
    , text >=1.1
    , primitive >=0.7.3
    , contiguous >=0.6.1
    , array-chunks >=0.1.3
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
    , base >=4.12.0.0 && <5
    , c-builder
    , tasty
    , tasty-golden
    , text-short
    , array-builder
    , bytestring >= 0.10
    , byteslice >=0.2.5
